Add GeneralController
